# ICL_Voice_Assistant

./: Setup-AutoStart.ps1  Start-Kiosk.ps1  context.md  pyproject.toml  start_kiosk.bat
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/vector_store/: chroma.sqlite3
docs/: UI_FREEZE_FIX.md
knowledge_base/general/: icl_info.md
knowledge_base/raw/: pages.json  pdf_extraction_summary.json  pdf_manifest.json
knowledge_base/raw/pdf_text/: 130w-laser-user-manual.txt  3D-Printing-Hardware-Guide-1.txt  3D-Printing-Software-Guide.txt  A1DogecheeL.txt  Ender-3-v3-ke-user-guide.txt  Janome-792pg-Serger-Manual.txt  Janome-HD-3000-User-Manual.txt  go.txt  (+14 more)
scripts/: benchmark.py  crawl_icl.py  extract_pdfs.py  generate_knowledge_base.py  launch_kiosk.py  test_kiosk_ui.py  test_push_to_talk.py  test_rag_pipeline.py  test_rag_text.py  test_retrieval.py  update_knowledge_base.py
src/: __init__.py  main.py  pipeline.py
src/audio/: __init__.py  capture.py  playback.py
src/llm/: __init__.py  ollama.py  prompts.py
src/rag/: __init__.py  chunker.py  embeddings.py  ingest.py  retriever.py  vectorstore.py
src/stt/: __init__.py  whisper.py
src/tts/: __init__.py  piper.py
src/ui/: __init__.py  error_handling.py  kiosk_app.py  kiosk_window.py  pipeline_worker.py  styles.py
tests/: __init__.py  test_audio.py  test_components.py  test_error_handling.py  test_integration.py  test_kiosk_ui.py  test_llm.py  test_pipeline.py  test_rag.py  test_stt.py  test_tts.py  test_ui_freeze_fix.py
(+30 files in other folders)
